--- a/TcpClient/App.xaml
+++ b/TcpClient/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="TcpClient.App"
+﻿<Application x:Class="MyTcpClient.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:TcpClient"
+             xmlns:local="clr-namespace:MyTcpClient"
              StartupUri="ClientMain.xaml">
     <Application.Resources>
          
