--- a/TcpClient/ClientMain.xaml
+++ b/TcpClient/ClientMain.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="TcpClient.MainWindow"
+﻿<Window x:Class="MyTcpClient.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:TcpClient"
+        xmlns:local="clr-namespace:MyTcpClient"
         mc:Ignorable="d"
         Title="Client" Height="350" Width="525">
     <Grid>
