--- a/TcpClient/App.xaml
+++ b/TcpClient/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:MyTcpClient"
-             StartupUri="LoginWindow.xaml">
+             StartupUri="ClientMain.xaml">
     <Application.Resources>
          
     </Application.Resources>
