--- a/TcpClient/ClientMain.xaml
+++ b/TcpClient/ClientMain.xaml
@@ -5,15 +5,18 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MyTcpClient"
         mc:Ignorable="d"
-        Title="Client" Height="350" Width="525">
+        Title="Client" Height="350" Width="525" Background="#FF7CA0FF" ResizeMode="CanResize">
     <Grid>
-        <Label Name="Label1">
-            "Hello world"
-        </Label>
-        <TextBox Margin="46, 64,71 , 0" Height="20" Name="textBox1">
-        </TextBox>
-        <Button Name="btn1" Margin="46, 124, 71, 0" Height="20" Click="btn1_Click" Content="btn">
+        <Label Margin="11, 10, 0, 0" Height="40" HorizontalAlignment="Left" VerticalAlignment="Top" Content="Messages:"></Label>
+        <Label Margin="351, 10, 0, 0" Height="40" HorizontalAlignment="Left" VerticalAlignment="Top" Content="Now in chat:"></Label>
+        <TextBox Height="231" HorizontalAlignment="Left" Margin="11,38,0,0" Name="TBchatBox" VerticalAlignment="Top" Width="330" IsReadOnly="True" VerticalScrollBarVisibility="Visible" />
+        <TextBox Height="231" HorizontalAlignment="Right" Margin="351,38,0,0" Name="TBmessagesFrom" VerticalAlignment="Top" Width="150" IsReadOnly="True" VerticalScrollBarVisibility="Visible" />
+        <Label Margin="11, 265, 0, 0" Height="40" HorizontalAlignment="Left" VerticalAlignment="Top" Content="Message:"></Label>
+        <TextBox Margin="11, 280, 0, 0" Height="20" Width="330" Name="TBmessage" HorizontalAlignment="Left"></TextBox>
+        <Button Margin="351, 280, 0,0" Height="20" Width="150" Name="BtnSend" HorizontalAlignment="Right" Content="Send">
         </Button>
+
+
 
     </Grid>
 </Window>
