--- a/TcpClient/Registration.xaml
+++ b/TcpClient/Registration.xaml
@@ -34,7 +34,7 @@
             </TextBox>
             <Button Name="ButtonRegistration" Content="Registrate"  Margin="0,10,0,0" Width="150" Height="28" HorizontalAlignment="Center" Click="ButtonRegistration_Click">
             </Button>
-            <Label Content="13123" Name="LabelResultReg" HorizontalAlignment="Center">
+            <Label Content="" Name="LabelResultReg" HorizontalAlignment="Center">
             </Label>
         </StackPanel>
     </Grid>
